# rust

./: .gitignore  ASSESSMENT.md  Cargo.toml  README.md  SDE3_IMPLEMENTATION_PLAN.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/corelib/: Cargo.toml
crates/corelib/src/: lib.rs
crates/fundamentals/: Cargo.toml
crates/fundamentals/src/: api_design.rs  async_primer.rs  async_tasks.rs  borrow_checker.rs  borrowing.rs  cargo_basics.rs  closures.rs  collections.rs  collections_ownership.rs  combinators.rs  concurrency.rs  concurrency_primitives.rs  drop_raii.rs  enums_modeling.rs  error_composition.rs  errors.rs  file_io.rs  io_basics.rs  iterators.rs  lib.rs  lifetimes.rs  macros_demo.rs  modules_vis.rs  ownership.rs  pattern_match.rs  performance.rs  pinning.rs  result_ergonomics.rs  send_sync.rs  serde_roundtrip.rs  smart_pointers.rs  strings.rs  testing.rs  threads.rs  tooling.rs  tracing_spans.rs  traits_generics.rs  unsafe_ffi.rs  variables.rs
crates/production_patterns/: Cargo.toml
crates/production_patterns/benches/: atomic_bench.rs  channel_bench.rs  concurrency_bench.rs
crates/production_patterns/src/: actor.rs  adaptive_pool.rs  async_channels.rs  async_streams.rs  atomic_patterns.rs  backpressure.rs  batching.rs  checkpoint.rs  circuit_breaker.rs  common.rs  distributed_lock.rs  error.rs  exactly_once.rs  fan_out_fan_in.rs  graceful_shutdown.rs  leak_detector.rs  lib.rs  lock_free.rs  memory_model.rs  metrics.rs  pipeline.rs  rate_limiter.rs  rcu.rs  retry.rs  sharded_actor.rs  supervision.rs  task_scheduler.rs  worker_pool.rs
mastery/compiler/docs/: handbook.md
mastery/database/docs/: handbook.md
mastery/devtools/docs/: handbook.md
mastery/formatter/docs/: handbook.md
mastery/ide/docs/: handbook.md  learning_units.md  logs.md
mastery/ide/invariant-core/inv01-buffer/: Cargo.toml  lib.rs  piece_table.rs
mastery/ide/invariant-core/inv01-buffer/src/: lib.rs  line_map.rs
mastery/ide/mapping/: inv01-buffer.md  inv02-change-stream.md
mastery/infra/docs/: handbook.md
mastery/interpreter/docs/: handbook.md
mastery/platform-engineering/docs/: handbook.md
mastery/product-thinking/: mastery-workflow.md
product-thinking/: read.md  systems-mastery-guide.md
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs  lessons.rs
