[package]
name = "production_patterns"
version = "0.1.0"
edition = "2021"
description = "Production-grade concurrency patterns for SDE-3 level systems"
authors = ["Rust Concurrency Reference"]

[dependencies]
tokio = { version = "1.0", features = ["full", "sync", "rt", "macros", "time", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
prometheus = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
loom = "0.5"
